 (Format: Year/Month/Day)
Changes for 1.0.1:
*07/10/21:
   * Allow decorations bitmask to be specified using '0x' (Mark)
     Window.cc
*07/10/18:
   * Fixed gcc 2.96 compile problem ( Thanks rumpole at hotmail )
     bug #1809786
     src/FbTk/TextBox.cc
*07/10/15:
   * Added OnWindow modifier to keys file (Mark)
     Keys.cc Window.cc Screen.cc CurrentWindowCmd.cc
*07/10/14:
   * Added support for transient windows in window patterns, e.g.
     (transient=yes|no), defaulting to "no" for the apps file (Mark)
     Remember.cc ClientPattern.cc/hh Focusable.hh Window.cc/hh
   * Bugfix for SendToPrevWorkspace/TakeToPrevWorkspace (Mathias)
     CurrentWindowCmd.cc/hh
*07/10/13:
   * Merged pre-devel branch; see all Changes since 1.0.0 (Mark)
   * Updated ru_RU (Thanks Konstantin Shashkin)
   * deiconify windows via :Deiconify in reverse order (Mathias)
     FbCommands.cc
*07/05/23:
   * Added key command :Attach <pattern> which groups all windows matching the
     given pattern (Mark)
     FbCommandFactory.cc WorkspaceCmd.cc/hh
*07/05/20:
   * Added resources session.screen<N>.maxDisable{Move,Resize}: <boolean>, which
     prevent maximized windows from being moved/resized (Mark)
     Window.cc Screen.cc/hh nls/fluxbox-nls.hh
*07/05/19:
   * Changed behavior of resource session.screen<N>.followModel (Mark)
     - now only options are Ignore and Follow, the latter using the setting in
       session.screen<N>.userFollowModel
     Window.cc/hh Ewmh.cc Screen.cc/hh
*07/05/16:
   * Added new resource session.screen<N>.noFocusWhileTypingDelay: <int> (Mark)
     - specifies a time in milliseconds that new windows should not gain focus
       while the user is typing in the focused window
     Window.cc/hh Screen.cc/hh
*07/05/13:
   * Added new placement policies {Row,Col}MinOverlapPlacement. They behave the
     same as {Row,Col}SmartPlacement when the window fits but fall back on
     minimizing overlap with other windows instead of CascadePlacement (Mark)