@@ -1,5 +1,14 @@
  (Format: Year/Month/Day)
 Changes for 1.0.1:
+*07/10/22:
+   * Replaced modKey with new commands StartMoving and StartResizing (Mark)
+     - your keys file should be updated automatically
+     - they must be used with a mouse button, or they won't work
+     - StartResizing takes one or none of the following arguments:
+       NearestCorner, Center, TopLeft, TopRight, BottomLeft, BottomRight
+     Window.cc/hh CurrentWindowCmd.cc/hh FbCommandFactory.cc Screen.cc/hh
+     fluxbox.cc/hh ScreenResources.cc FbCommands.cc/hh
+     util/fluxbox-update_configs.cc
 *07/10/21:
    * Allow decorations bitmask to be specified using '0x' (Mark)
      Window.cc
